<resources>

    <!-- App -->
    <string name="app_name">Realcomm</string>
    <string name="openBoxCompanyName">Open Box Software</string>
    <string name="openLeaseCompanyName">Open Lease</string>

    <!-- Menu -->
    <string name="updateMenuItemTitle">Update</string>
    <string name="settingsMenuItemTitle">Settings</string>

    <!-- EditTexts -->
    <string name="boothFilterHint">Filter by name or number</string>

    <!-- Menu -->
    <string name="menuInfo">Info</string>

    <!-- Buttons -->
    <string name="button1Text">Start AsyncTask</string>
    <string name="button2Text">Cancel AsyncTask</string>
    <string name="boothFragmentViewProfileButtonText">VIEW PROFILE</string>

    <!-- Labels -->
    <string name="goToListingText">Go To Listing</string>
    <string name="getServiceMessageText">Get Service Message</string>
    <string name="boothListViewHeaderText">Booths</string>
    <string name="lastUpdateLabel">Last Update:</string>
    <string name="lastUpdateInitialValue">N/A</string>
    <string name="proximityLabel">Proximity Sensing:</string>
    <string name="splashHeader">Realcomm 2014</string>
    <string name="splashSubHeader">Las Vegas</string>
    <string name="splashExploreTitle">Explore</string>
    <string name="splashExploreDesc">Access information and contact details of exhibitors near you</string>
    <string name="splashSearchTitle">Search</string>
    <string name="splashSearchDesc">Search a complete directory of exhibitors</string>
    <string name="splashAttendTitle">Attend</string>
    <string name="splashAttendDesc">Up-to-the-minute schedule of conference events</string>
    <string name="companyAddressTitle">ADDRESS</string>
    <string name="companyContactTitle">CONTACT</string>
    <string name="companyLinksTitle">LINKS</string>
    <string name="infoDevelopedBy">Developed by:</string>
    <string name="infoImageCourtesyOf">Background image copyright</string>

    <!-- Preferences -->
    <string name="enableProximityTitle">Enable Proximity Sensing</string>
    <string name="enableProximitySummary">Toggle to enable or disable bluetooth proximity sensing.</string>

    <!-- Image Content Descriptions -->
    <string name="iconImageDescription">Icon</string>
    <string name="logoImageDescription">Company Logo</string>
    <string name="contactImageDescription">Contact Image</string>
    <string name="proximityImageDescription">Proximity Graphic</string>
    <string name="facebookImageDescription">Facebook Icon</string>
    <string name="twitterImageDescription">Twitter Icon</string>
    <string name="linkedInImageDescription">LinkedIn Icon</string>

    <!-- Image Content Descriptions -->
    <string name="boothListTabAtoZ">A - Z</string>
    <string name="boothListTabNearMe">Near Me</string>
    <string name="dashboardPhoneMenuItem">Menu Icon</string>

</resources>