<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/companySocialNetworksLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/socialNetworksMargin"
    android:layout_marginTop="0dp"
    android:orientation="horizontal" >

    <ImageButton
        android:id="@+id/twitterImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/socialNetworksSpacingMargin"
        android:background="@null"
        android:contentDescription="@string/twitterImageDescription"
        android:src="@drawable/icon_social_twitter"
        android:visibility="invisible" />

    <ImageButton
        android:id="@+id/facebookImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/socialNetworksSpacingMargin"
        android:background="@null"
        android:contentDescription="@string/facebookImageDescription"
        android:src="@drawable/icon_social_facebook"
        android:visibility="invisible" />

    <ImageButton
        android:id="@+id/linkedInImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="@string/linkedInImageDescription"
        android:src="@drawable/icon_social_linkedin"
        android:visibility="invisible" />

</LinearLayout>