<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/splashScreenHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/splashHeader"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSizeBiggest" />

                <TextView
                    android:id="@+id/splashScreenSubHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/splashSubHeader"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSizeBiggest" />
            </LinearLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <FrameLayout
                android:id="@+id/splashCircleRed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/defaultMargin"
                android:background="@drawable/splash_circle" >
            </FrameLayout>

            <FrameLayout
                android:id="@+id/splashCircleOrange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/defaultMargin"
                android:background="@drawable/splash_circle" >
            </FrameLayout>

            <FrameLayout
                android:id="@+id/splashCircleBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/defaultMargin"
                android:background="@drawable/splash_circle" >
            </FrameLayout>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/logos_landing" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3" >

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >
            </FrameLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:src="@drawable/icon_landing_explore" />

                <TextView
                    android:id="@+id/splashScreenExploreTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/splashExploreTitle"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSizeHuge" />

                <TextView
                    android:id="@+id/splashScreenExploreDescTextView"
                    android:layout_width="@dimen/splashTextWidth"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/splashExploreDesc"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSizeBig" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:src="@drawable/icon_landing_lookup" />

                <TextView
                    android:id="@+id/splashScreenFindTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/splashFindTitle"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSizeHuge" />

                <TextView
                    android:id="@+id/splashScreenFindDescTextView"
                    android:layout_width="@dimen/splashTextWidth"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/splashFindDesc"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSizeBig" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:src="@drawable/icon_landing_attend" />

                <TextView
                    android:id="@+id/splashScreenAttendTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/splashAttendTitle"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSizeHuge" />

                <TextView
                    android:id="@+id/splashScreenAttendDescTextView"
                    android:layout_width="@dimen/splashTextWidth"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/splashAttendDesc"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSizeBig" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >
            </FrameLayout>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/icon_landing_down" />
        </FrameLayout>
    </LinearLayout>

</FrameLayout>